[package]
name = "slugify"
version = "0.1.0"
edition = "2025"
authors = ["Om Chaudhary <omghanshyam394@gmail.com>"]
description = "A simple Rust library to slugify text (e.g., 'Café au lait' → 'cafe_au_lait')."
license = "MIT"
repository = "https://github.com/yourusername/slugify"
keywords = ["slugify", "text", "string", "utility"]

[dependencies]
